--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <img src="./logo.png" alt="Inshare logo" class="logo">
+    <a href="./index.html"><img src="./logo.png" alt="Inshare logo" class="logo"></a>
     <section class="upload-container">
         <form action="">
             <div class="drop-zone">
